2004-08-27  Sam Steingold  <sds@gnu.org>

	* ffi.tst (c-malloc, c-free): use a full path to /lib/libc.so,
	it appears that "c" is a cygwin-ism

2004-06-23  Bruno Haible  <bruno@clisp.org>

	* clos.tst: Add 2 tests for ensure-generic-function.

2004-06-20  Bruno Haible  <bruno@clisp.org>

	* clos.tst: Check that GC reclaims forward pointers of reallocated
	generic functions.

2004-06-20  Bruno Haible  <bruno@clisp.org>

	* clos.tst: Add tests for custom generic-function-class.

2004-08-20  Sam Steingold  <sds@gnu.org>

	* conditions.tst (use-value-read): renamed from
	use-value-string->symbol, use READ instead of INTERN,
	handle SOURCE-PROGRAM-ERROR; added 2 tests that use it

2004-08-11  Sam Steingold  <sds@gnu.org>

	* conditions.tst: disable tests that rely on lambda list errors
	being TYPE-ERRORS (they are program errors now)
	* excepsit.tst: updated the lambda list tests
	* macro8.tst: new test for *DEFUN-ACCEPT-SPECIALIZED-LAMBDA-LIST*

2004-08-11  Sam Steingold  <sds@gnu.org>

	* ffi.tst (c-malloc, c-free): added a couple of poor-style tests

2004-08-04  Bruno Haible  <bruno@clisp.org>

	* alltest.tst, clos.tst, format.tst, hashlong.tst, symbol10.tst,
	type.tst: Update for CMUCL 19a.
	* macro8.tst: Fix CMUCL specific typo.
	* mop.tst: Make some tests work on CMUCL and SBCL.

2004-08-04  Bruno Haible  <bruno@clisp.org>

	* clos.tst: Mark the :fixed-slot-locations tests as clisp-specific.
	* streamslong.tst: Mark a test as clisp-specific.

2004-08-07  Bruno Haible  <bruno@clisp.org>

	* clos.tst: Add one more test.

2004-06-13  Bruno Haible  <bruno@clisp.org>

	* type.tst: Update SUBTYPEP test to match the fact that the user can
	create subclasses of both STREAM and STANDARD-GENERIC-FUNCTION.

2004-06-12  Bruno Haible  <bruno@clisp.org>

	* clos.tst: Add tests of set-funcallable-instance-function.

2004-06-10  Bruno Haible  <bruno@clisp.org>

	* clos.tst: 12 new tests about user-defined methods.

2004-07-28  Sam Steingold  <sds@gnu.org>
